--- a/dom/index.html
+++ b/dom/index.html
@@ -16,7 +16,7 @@
         <label>Percentage Tip:</label><input type="number" id="percentage-tip"></br>
         <label>Tip Amount:</label><input type="number" id="tip-amount" min="0" disabled></br>
         <label>Total:</label><input type="number" id="total" disabled></br>
-        <button id="calculate">Calculate</button>
+        <button id="calculate" onclick="Calculate()">Calculate</button>
     </div>
     <script src="app.js"></script>
 </body>
